@@ -44,6 +44,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>openjfx-monocle</artifactId>
+            <version>jdk-12.0.1+2</version> <!-- jdk-11+26 for Java 11, jdk-9+181 for Java 9, 8u76-b04 for Java 8 -->
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
             <version>2.1</version>
@@ -103,6 +109,16 @@
                     <version>2.22.0</version>
                     <configuration>
                         <argLine>${argLine}</argLine>
+
+                        <systemPropertyVariables>
+                            <glass.platform>Monocle</glass.platform>
+                            <monocle.platform>Headless</monocle.platform>
+                            <prism.order>d3d</prism.order>
+                        </systemPropertyVariables>
+                        <argLine>
+                            --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                            --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        </argLine>
                     </configuration>
                 </plugin>
                 <plugin>
